gccida/g2/copy_node
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_node/src/tree.c:958:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_node/src/tree.c:959:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // r8 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_node/src/tree.c:969:19: error: expected expression
v4 = ( tree_node *)memcpy( v3, node, v2); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_node/src/tree.c:969:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)memcpy( v3, node, v2); 
       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_node/src/obj/tree.o] Error 1
